--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         </nav>
     </header>
     <main>
+        <section class="background"/>
+
         <h1>Verde Ação</h1>
         <p>Ser voluntário na Verde Ação é plantar esperança e colher transformação. Juntos, cuidamos do planeta e inspiramos mudanças reais!</p>
+        </>
         
     </main>
 </body>
